<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CheckIn Visitas</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Tela Login -->
    <string name="title_activity_login">Login</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="perfil">Perfil</string>
    <string name="btnLogar">Entrar</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="aviso_login_invalido">Usuário ou senha inválidos</string>

    <!-- Tele Menu Geral -->
    <string name="title_activity_menu_geral">Menu</string>
    <string name="btnCadVendedor">Cadastro de Vendedor</string>
    <string name="btnCadVisita">Cadastro de Visita</string>
    <string name="btnCadAdmin">Cadastro de Administradores</string>
    <string name="btnLstVisita">Listar Visitas</string>
    <string name="btnVoltar">Voltar</string>
    <string name="btnConfirmar">Confirmar</string>

    <!-- Tela Cadastro de Vendedor -->
    <string name="title_activity_cad_vendedor">Cadastro de Vendedor</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="vendedor_cadastrado">Vendedor cadastro com sucesso</string>
    <string name="aviso_erro_lista_vendedores">Erro ao listar vendedores</string>
    <string name="foto_em_branco">Foto em branco</string>

    <!-- Tela Cadastro de Visitas -->
    <string name="title_activity_cad_visita">Cadastro de Visitas</string>
    <string name="cliente">Cliente</string>
    <string name="vendedor">Vendedor</string>
    <string name="endereco">Endereço</string>
    <string name="data">Data</string>
    <string name="hora">Hora</string>
    <string name="aviso_clique_hora">Clique duplo para informar a hora.</string>
    <string name="aviso_clique_data">Clique duplo para informar a data.</string>
    <string name="visita_cadastrada">Visita cadastra com sucesso</string>

    <!-- Tela Lista Visitas -->
    <string name="title_activity_lst">Lista de Visitas</string>
    <string name="checkin">Marcar Visita Realizada</string>
    <string name="menu_mapa">Mapa</string>
    <string name="alterarFoto">Atualizar foto</string>
    <string name="situacao">Situação</string>
    <string name="em_andamento">Em andamento</string>
    <string name="finalizada">Finalizada</string>
    <string name="aviso_apenas_um_endereco">Marque apenas um endereço para visualizar no mapa</string>
    <string name="aviso_marque_um_endereco">"Marque um endereço para visualizar no mapa"</string>
    <string name="aviso_visita_concluida">"Visita concluída"</string>
    <string name="aviso_apenas_uma_visita">Marque apenas uma visita para finalizar</string>
    <string name="aviso_marque_uma_visita">"Marque uma visita para finalizar."</string>
    <string name="aviso_usuario_sem_permissao">Usuário sem permissão</string>"
    <string name="aviso_erro_lista_visita">erro_lista_visita</string>
    <string name="aviso_erro_finaliza_visita">Erro ao finalizar visita.</string>

    <!-- Tela Cadastro de Usuarios -->
    <string name="title_activity_cad_usuario">Cadastro de Administrador</string>
    <string name="usuario_cadastrado">Usuário cadastro com sucesso</string>
    <string name="aviso_erro_cadastro">Ocorreu um erro durante o cadastro verifique a conexão</string>

    <!-- Msg Gerais-->
    <string name="aviso_erro_conexaows">Erro ao conectar com WebService, tente novamente.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="ip_na_rede">WS esta on.</string>
    <string name="ip_fora_da_rede">WS esta off.</string>
    <string name="aviso_clique_duplo_botao_esquerdo">Clique duplo no botão esquerdo para exibir a lista.</string>

</resources>