<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:theme="@style/AppTheme">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/itCadVendedor"
            android:icon="@drawable/ic_cad_usuvendedor"
            android:title="@string/btnCadVendedor" />
        <item
            android:id="@+id/itCadVisita"
            android:icon="@drawable/ic_add_visita"
            android:title="@string/btnCadVisita" />
        <item
            android:id="@+id/itCadAdmin"
            android:icon="@drawable/ic_cad_usuvendedor"
            android:title="@string/title_activity_cad_usuario" />
        <item
            android:id="@+id/itVerNoMapa"
            android:icon="@drawable/ic_explore_black_36dp"
            android:title="@string/menu_mapa" />

    </group>

</menu>