<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />
        <variable name="visita" type="br.com.android.check.domain.Visita" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:id="@+id/llCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chkLstVisita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@{visita.chkMarcado}" />

            <TextView
                android:id="@+id/txtCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/cliente"
                android:text="@{visita.cliente}"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlDadosCliente0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/llCliente">

            <TextView
                android:id="@+id/txtEndereco"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="33dp"
                android:layout_marginStart="0dp"
                android:hint="@string/endereco"
                android:text="@{visita.endereco}"/>

            <RelativeLayout
                android:id="@+id/rlDadosCliente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtEndereco">

                <TextView
                    android:id="@+id/txtTelefone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="33dp"
                    android:layout_marginStart="0dp"
                    android:hint="@string/telefone"
                    android:text="@{visita.telefone}"/>

                <TextView
                    android:id="@+id/txtData"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtTelefone"
                    android:layout_marginLeft="33dp"
                    android:layout_marginStart="0dp"
                    android:hint="@string/data"
                    android:text="@{visita.data}"/>

                <TextView
                    android:id="@+id/txtHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtData"
                    android:layout_marginLeft="33dp"
                    android:layout_marginStart="0dp"
                    android:hint="@string/hora"
                    android:text="@{visita.hora}"/>

                <TextView
                    android:id="@+id/txtVendedor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtHora"
                    android:layout_marginLeft="33dp"
                    android:layout_marginStart="0dp"
                    android:hint="@string/vendedor"
                    android:text="@{visita.vendedor.nome}"/>

                <TextView
                    android:id="@+id/txtSituacao"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txtVendedor"
                    android:layout_marginLeft="33dp"
                    android:layout_marginStart="0dp"
                    android:hint="@string/situacao"
                    android:text="@{visita.txtSituacao}"/>
            </RelativeLayout>

        </RelativeLayout>

        <View
            android:id="@+id/vw_divider"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_below="@+id/rlDadosCliente0"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary" />
    </RelativeLayout>
</layout>