<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable name="vendedor" type="br.com.android.check.domain.Vendedor"/>
    </data>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="br.com.android.check.CadVendedor">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@drawable/toolbar_rounded_corners"
            android:elevation="4dp"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:theme="@style/AppTheme.LoginFloatingActionBottom">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/rivFoto"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="4dp"
                android:src="@color/colorPrimaryGreen"
                app:riv_corner_radius="400dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabFotografar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/rivFoto"
                android:layout_alignRight="@id/rivFoto"
                android:src="@drawable/ic_camera_white" />
        </RelativeLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtNomeWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableRight="@drawable/ic_legenda"
                android:hint="@string/nome"
                android:text="@{vendedor.nome}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtTelefoneWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtTelefone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableRight="@drawable/ic_telefone"
                android:hint="@string/telefone"
                android:inputType="phone"
                android:text="@{vendedor.telefone}"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/edtSenhaWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableRight="@drawable/ic_senha"
                android:hint="@string/senha"
                android:inputType="textPassword"
                android:text="@{vendedor.senha}"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:theme="@style/AppTheme.LoginFloatingActionBottom">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabCadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:src="@drawable/ic_cad_padrao_branco" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fabCancelar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/abc_ic_clear_mtrl_alpha" />
        </LinearLayout>
    </LinearLayout>
</layout>